cmake_minimum_required(VERSION 3.12)

project(SToRM Fortran)

include(GNUInstallDirs)

find_package(iriclib)

add_executable(SToRM
  Source_xsy-64bit/add_array_ptoH.f90
  Source_xsy-64bit/add_array_ptoT.f90
  Source_xsy-64bit/add_edge_to_array.f90
  Source_xsy-64bit/adjust_bed_elevation.f90
  Source_xsy-64bit/adjust_water_depth.f90
  Source_xsy-64bit/adjustZb.f90
  Source_xsy-64bit/afe_flux.f90
  Source_xsy-64bit/alloc_err.f90
  Source_xsy-64bit/azimuth2angle.f90
  Source_xsy-64bit/bcs.f90
  Source_xsy-64bit/bed_slope.f90
  Source_xsy-64bit/bed_slope_DFB.f90
  Source_xsy-64bit/bed_slope_ETA.f90
  Source_xsy-64bit/bed_slope_STD.f90
  Source_xsy-64bit/bed_slope_VTX.f90
  Source_xsy-64bit/byebye.f90
  Source_xsy-64bit/c2v_setup.f90
  Source_xsy-64bit/ccstring.f90
  Source_xsy-64bit/cde_t2t.f90
  Source_xsy-64bit/cell_centered.f90
  Source_xsy-64bit/cell_grads.f90
  Source_xsy-64bit/cell_velocity.f90
  Source_xsy-64bit/centered.f90
  Source_xsy-64bit/chan_arrays.f90
  Source_xsy-64bit/constants.f90
  Source_xsy-64bit/correct_vtx.f90
  Source_xsy-64bit/crit_outflow.f90
  Source_xsy-64bit/ctr2vtx.f90
  Source_xsy-64bit/ctr2vtxWSE.f90
  Source_xsy-64bit/cvdisch.f90
  Source_xsy-64bit/cvprep.f90
  Source_xsy-64bit/dataprepFVT.f90
  Source_xsy-64bit/dataprepRDS.f90
  Source_xsy-64bit/deltat.f90
  Source_xsy-64bit/deltatFVT.f90
  Source_xsy-64bit/dep_vars.f90
  Source_xsy-64bit/dirichlet.f90
  Source_xsy-64bit/distribution.f90
  Source_xsy-64bit/drynwet.f90
  Source_xsy-64bit/dump2file.f90
  Source_xsy-64bit/eddy_viscosity.f90
  Source_xsy-64bit/edge_copy.f90
  Source_xsy-64bit/edge_in_array.f90
  Source_xsy-64bit/edge_in_element.f90
  Source_xsy-64bit/edge_normals.f90
  Source_xsy-64bit/elemnt_db.f90
  Source_xsy-64bit/enforce_bcs.f90
  Source_xsy-64bit/equals.f90
  Source_xsy-64bit/err_opts.f90
  Source_xsy-64bit/error_est.f90
  Source_xsy-64bit/errore.f90
  Source_xsy-64bit/fe_flux.f90
  Source_xsy-64bit/find_dry_cells.f90
  Source_xsy-64bit/find_edges.f90
  Source_xsy-64bit/findtt.f90
  Source_xsy-64bit/findttcheck.f90
  Source_xsy-64bit/flood_chan.f90
  Source_xsy-64bit/flux_ac.f90
  Source_xsy-64bit/flux_bgnvc.f90
  Source_xsy-64bit/flux_HLL.f90
  Source_xsy-64bit/flux_rusanov.f90
  Source_xsy-64bit/fnames.f90
  Source_xsy-64bit/free_flow.f90
  Source_xsy-64bit/fric_slope.f90
  Source_xsy-64bit/fric_terms.f90
  Source_xsy-64bit/fric_terms_impl.f90
  Source_xsy-64bit/fvsources.f90
  Source_xsy-64bit/geometry.f90
  Source_xsy-64bit/get_extension.f90
  Source_xsy-64bit/get_iounit.f90
  Source_xsy-64bit/get_time_bcs.f90
  Source_xsy-64bit/grad.f90
  Source_xsy-64bit/gradhordr.f90
  Source_xsy-64bit/hdlsq_grad_array.f90
  Source_xsy-64bit/hdlsq_grad_array4h.f90
  Source_xsy-64bit/hdlsq_setup.f90
  Source_xsy-64bit/header.f90
  Source_xsy-64bit/heffective.f90
  Source_xsy-64bit/hequivalent.f90
  Source_xsy-64bit/hgradfix.f90
  Source_xsy-64bit/hgradfix2.f90
  Source_xsy-64bit/hot_start_ASCII.f90
  Source_xsy-64bit/hot_start_cgns.f90
  Source_xsy-64bit/ibc_arrays.f90
  Source_xsy-64bit/ifname.f90
  Source_xsy-64bit/in_array.f90
  Source_xsy-64bit/in_array2.f90
  Source_xsy-64bit/inflowH.f90
  Source_xsy-64bit/inflowQbyH.f90
  Source_xsy-64bit/initialize_options.f90
  Source_xsy-64bit/integral_md.f90
  Source_xsy-64bit/integral_Ut.f90
  Source_xsy-64bit/invert.f90
  Source_xsy-64bit/invert_edge_dirs.f90
  Source_xsy-64bit/invisc_fluxes.f90
  Source_xsy-64bit/io.f90
  Source_xsy-64bit/ioculvert.f90
  Source_xsy-64bit/ioflow.f90
  Source_xsy-64bit/is_edge.f90
  Source_xsy-64bit/jacobian.f90
  Source_xsy-64bit/kmatrices.f90
  Source_xsy-64bit/lda.f90
  Source_xsy-64bit/limiterBJ.f90
  Source_xsy-64bit/local_edge.f90
  Source_xsy-64bit/lsq_grad_array.f90
  Source_xsy-64bit/lsq_grad_array4h.f90
  Source_xsy-64bit/lsq_gradient.f90
  Source_xsy-64bit/lsq_setup.f90
  Source_xsy-64bit/margins.f90
  Source_xsy-64bit/mem_add.f90
  Source_xsy-64bit/mem_call.f90
  Source_xsy-64bit/memory.f90
  Source_xsy-64bit/mesh_in.f90
  Source_xsy-64bit/mesh_out.f90
  Source_xsy-64bit/narrow.f90
  Source_xsy-64bit/neighbor.f90
  Source_xsy-64bit/node_db.f90
  Source_xsy-64bit/node_in_bdry.f90
  Source_xsy-64bit/node_in_triang.f90
  Source_xsy-64bit/nonlinearb.f90
  Source_xsy-64bit/npoints.f90
  Source_xsy-64bit/options.f90
  Source_xsy-64bit/outflowbyH.f90
  Source_xsy-64bit/outflowbyH2.f90
  Source_xsy-64bit/outflowbyH3.f90
  Source_xsy-64bit/output_data.f90
  Source_xsy-64bit/output_dataV.f90
  Source_xsy-64bit/overdraft.f90
  Source_xsy-64bit/parameters.f90
  Source_xsy-64bit/part_dry.f90
  Source_xsy-64bit/phisubt.f90
  Source_xsy-64bit/positivity_vtx.f90
  Source_xsy-64bit/probefileh.f90
  Source_xsy-64bit/probefileo.f90
  Source_xsy-64bit/pto_in_edge.f90
  Source_xsy-64bit/pto_in_triangle.f90
  Source_xsy-64bit/query.f90
  Source_xsy-64bit/read_cgns.f90
  Source_xsy-64bit/read_data.f90
  Source_xsy-64bit/read_mfa.f90
  Source_xsy-64bit/read_options.f90
  Source_xsy-64bit/readline.f90
  Source_xsy-64bit/readp.f90
  Source_xsy-64bit/residuals.f90
  Source_xsy-64bit/RKparams.f90
  Source_xsy-64bit/rmv_array_pto.f90
  Source_xsy-64bit/rvegdata.f90
  Source_xsy-64bit/select_out.f90
  Source_xsy-64bit/Shields_diameter.f90
  Source_xsy-64bit/Shields_tau.f90
  Source_xsy-64bit/skin_friction.f90
  Source_xsy-64bit/solver.f90
  Source_xsy-64bit/solverFVT.f90
  Source_xsy-64bit/solverRDS.f90
  Source_xsy-64bit/sortEdges.f90
  Source_xsy-64bit/spit_out.f90
  Source_xsy-64bit/storm.f90
  Source_xsy-64bit/strip_ext.f90
  Source_xsy-64bit/t_areas.f90
  Source_xsy-64bit/tecplot.f90
  Source_xsy-64bit/tecplot_read.f90
  Source_xsy-64bit/tecplot_write.f90
  Source_xsy-64bit/to_upper.f90
  Source_xsy-64bit/to_vertices.f90
  Source_xsy-64bit/vbc_arrays.f90
  Source_xsy-64bit/vbc_by_h.f90
  Source_xsy-64bit/vcrop.f90
  Source_xsy-64bit/visc_fluxes.f90
  Source_xsy-64bit/visc_terms.f90
  Source_xsy-64bit/viscosity.f90
  Source_xsy-64bit/vtx2ctr.f90
  Source_xsy-64bit/walls.f90
  Source_xsy-64bit/wenslp2_fluxes.f90
  Source_xsy-64bit/wenslp3_fluxes.f90
  Source_xsy-64bit/wenslp_fluxes.f90
  Source_xsy-64bit/weslp2_fluxes.f90
  Source_xsy-64bit/weslp3_fluxes.f90
  Source_xsy-64bit/weslp_fluxes.f90
  Source_xsy-64bit/wetdryfix.f90
  Source_xsy-64bit/wetdryvfix.f90
  Source_xsy-64bit/windforcing.f90
  Source_xsy-64bit/windforcing2.f90
  Source_xsy-64bit/write_cgns.f90
  Source_xsy-64bit/write_cgns_cblock.f90
  Source_xsy-64bit/write_cgns_cell.f90
  Source_xsy-64bit/zeta_bcs.f90
)

target_link_libraries(SToRM iriclib::iriclib)

install(TARGETS SToRM DESTINATION "${CMAKE_INSTALL_BINDIR}")

install(FILES SToRM/definition-xsy.xml DESTINATION "${CMAKE_INSTALL_BINDIR}" RENAME definition.xml)

include(CTest)

add_subdirectory(tests)
